<resources>
    <string name="app_name">Study Habit Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_title">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="notification">Notification</string>
    <string name="donate">Buy a cup of coffee $1</string>
    <string name="ic_donate_description">Buying a cup of coffee $1</string>
    <string name="dark_switch_description">Dark theme switch</string>
    <!-- Navigation Bar -->
    <string name="navigation_bar_timer">Timer</string>
    <string name="navigation_bar_setting">Setting</string>
    <!-- Timer Fragment -->
    <string name="popup_msg">Remaining</string>
    <string name="hours_label">Hours</string>
    <string name="minutes_label">Minutes</string>
    <string name="seconds_label">Seconds</string>
    <string name="alert">Please Enter the Time</string>
    <string name="finish_button">Finish</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>

</resources>