<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/mainActivity_FrameLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background_color"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>
    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:background="@drawable/circular_shape"
        android:indeterminate="false"
        android:progress="10"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/advice_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!-- TEXT POPUP MSG -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/popup_msg"
        style="@style/popup_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_msg"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progress_bar" />
    <!-- HOURS MINUTES AND SECONDS BOXES -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/minutes_box"
        style="@style/boxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hours_box"
        style="@style/boxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/seconds_box"
        style="@style/boxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1" />
    <!-- COLONS-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/colon1"
        style="@style/colon_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@+id/minutes_box"
        app:layout_constraintStart_toEndOf="@+id/hours_box" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/colon2"
        style="@style/colon_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@+id/seconds_box"
        app:layout_constraintStart_toEndOf="@+id/minutes_box" />
    <!-- lABELS -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/box_labelH"
        style="@style/box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_label"
        app:layout_constraintEnd_toEndOf="@+id/hours_box"
        app:layout_constraintStart_toStartOf="@+id/hours_box"
        app:layout_constraintTop_toBottomOf="@id/guideline_h1" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/box_labelM"
        style="@style/box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_label"
        app:layout_constraintEnd_toEndOf="@+id/minutes_box"
        app:layout_constraintStart_toStartOf="@+id/minutes_box"
        app:layout_constraintTop_toBottomOf="@id/guideline_h1" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/box_labelS"
        style="@style/box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds_label"
        app:layout_constraintEnd_toEndOf="@+id/seconds_box"
        app:layout_constraintStart_toStartOf="@+id/seconds_box"
        app:layout_constraintTop_toBottomOf="@id/guideline_h1" />
    <!-- Advertisement -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/advice_error"
        style="@style/advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toTopOf="@+id/guideline_h1" />
    <!--Buttons -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_btn"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_btn"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/finish_btn" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause_btn"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/start_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>